# cql-agent

./: .env.example  .flake8  .gitignore  Dockerfile  Dockerfile.api  LICENSE  README.md  agent.py  docker-compose.yml  generate_fastapi.py  pyproject.toml  setup.sh  test_api.sh  test_security.sh
.claude/: CLAUDE_INSTRUCTIONS.md
.github/workflows/: on_push_to_main.yml
agents/: __init__.py  circuit_breaker.py
agents/llm/: README.md  __init__.py  config.py  embeddings_factory.py  factory.py
agents/rag/: loader.py  retriever.py  vectorstore.py
agents/rag/pdfs/: README.md
agents/repair_agent/: __init__.py  agent.py
agents/repair_agent/prompts/: base.py  messages.py  states.py
agents/tools/: __init__.py  web_search.py
api/: README.md  __init__.py  app.py  gunicorn.conf.py  logging_config.py  test_api.py
api/auth/: README.md  __init__.py  fingerprint.py  jwt_handler.py  middleware.py  rate_limiter.py
api/security/: README.md  context_analyzer.py  guardrails.py  intention_analyzer.py  ner_repair.py  sanitizer.py  test_context_analysis.py  test_ner.py  test_sanitizer.py  test_security.py  test_weighted_keywords.py
api/session_manager/: __init__.py  base.py  manager.py  memory_store.py  redis_store.py  serializer.py
api/tests/: README.md  __init__.py  conftest.py
api/tests/integration/: test_api.py  test_api_security.py  test_security_flow.py
api/tests/unit/: test_session_manager.py
api/tests/unit/auth/: __init__.py  test_fingerprint.py  test_jwt_handler.py  test_rate_limiter.py
api/tests/unit/security/: __init__.py  test_context_analysis.py  test_intention_analysis.py
docs/: AUTH_RATE_LIMITING.md  GUIA_DEPLOY.md  GUIA_SWAGGER.md  INTEGRACAO_OPENWEBUI.md  LLM_PROVIDERS.md  LOGGING.md  NER_GUIDE.md  QUICK_START_RAG.md  REDIS_SESSIONS.md  passo-a-passo.md  projeto.md
openwebui/: pipe.py
prompts/: README.md  __init__.py  messages.py
rag/: __init__.py  loader.py  retriever.py  vectorstore.py
scripts/: demo_context_analysis.py  demo_intention_analysis.py  demo_llm_providers.py  demo_ner.py  demo_weighted_keywords.py  setup_rag.py
security/: README.md  __init__.py  test_api_security.py  test_security.py
web/: PWA_README.md  README.md  biome.json  index.html  package.json  pnpm-lock.yaml  vite.config.ts
web/public/: manifest.json  offline.html  service-worker.js
web/src/: App.tsx  index.css
web/src/components/: README.md
web/src/components/Avatar/: Avatar.styles.ts  Avatar.test.tsx  Avatar.tsx  types.ts
web/src/components/Button/: Button.styles.ts  Button.test.tsx  Button.tsx  types.ts
web/src/components/Card/: Card.styles.ts  Card.test.tsx  Card.tsx  types.ts
web/src/components/ChatInput/: ChatInput.styles.ts  ChatInput.test.tsx  ChatInput.tsx  index.ts  types.ts
web/src/components/ErrorBoundary/: ErrorBoundary.styles.ts  ErrorBoundary.tsx
web/src/components/FeedbackButtons/: FeedbackButtons.styles.ts  FeedbackButtons.tsx  index.ts
web/src/components/Header/: Header.styles.ts  Header.tsx  types.ts
web/src/components/Input/: Input.styles.ts  Input.test.tsx  Input.tsx  types.ts
web/src/components/InstallPrompt/: InstallPrompt.styles.ts  InstallPrompt.tsx  index.ts
web/src/components/Layout/: Layout.styles.ts  Layout.tsx  types.ts
web/src/components/LoadingIndicator/: LoadingIndicator.styles.ts  LoadingIndicator.tsx
web/src/components/MessageBubble/: MessageBubble.styles.ts  MessageBubble.test.tsx  MessageBubble.tsx  index.ts  types.ts
web/src/components/MessageList/: MessageList.styles.ts  MessageList.tsx  index.ts  types.ts
web/src/components/MessageSkeleton/: MessageSkeleton.styles.ts  MessageSkeleton.tsx  index.ts
web/src/components/OfflineIndicator/: OfflineIndicator.styles.ts  OfflineIndicator.tsx  index.ts
web/src/components/ThinkingIndicator/: ThinkingIndicator.styles.ts  ThinkingIndicator.tsx  index.ts
web/src/config/: env.ts
web/src/containers/: README.md
web/src/hooks/: README.md  usePWA.ts  useSendMessage.ts
web/src/pages/Chat/: Chat.styles.ts  Chat.tsx
web/src/pages/NotFound/: NotFound.tsx
web/src/pages/Showcase/: Showcase.tsx
web/src/pages/Welcome/: Welcome.tsx
web/src/services/: README.md  api.ts  chat.service.ts  index.ts  types.ts
web/src/store/: README.md
web/src/store/chat/: index.ts  types.ts  useChatStore.ts
web/src/styles/: global.ts  theme.ts  types.ts
