[project]
name = "cql-agent"
version = "0.1.0"
description = "AI Agent for Home Repairs"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.1.1",
    "duckduckgo-search>=8.1.1",
    "langchain>=0.3.27",
    "langchain-chroma>=0.2.6",
    "langchain-community>=0.3.31",
    "langchain-ollama>=0.3.10",
    "pydantic>=2.12.2",
    "pypdf>=6.1.1",
    "flask>=3.0.0",
    "flask-cors>=5.0.0",
    "flask-restx>=1.3.0",
    "requests>=2.32.0",
    "gunicorn>=21.2.0",
    "bleach>=6.2.0",
    "markupsafe>=3.0.0",
    "sqlparse>=0.5.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
]

[tool.pytest.ini_options]
testpaths = ["security", "tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
]
